@types/bcryptjs added

--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "license": "ISC",
   "description": "Ejercicio con MongoDB",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.4"
+    "bcryptjs": "2.4.3",
+    "dotenv": "16.4.5",
+    "express": "4.19.2",
+    "jsonwebtoken": "9.0.2",
+    "mongoose": "8.5.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@types/bcryptjs": "2.4.6",
+    "nodemon": "3.1.4"
   }
 }
