--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "bcryptjs": "2.4.3",
     "dotenv": "16.4.5",
-    "express": "4.19.2",
+    "express": "^4.20.0",
     "jsonwebtoken": "9.0.2",
-    "mongoose": "8.5.1"
+    "mongoose": "8.5.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
