--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
     "dotenv": "16.4.5",
     "express": "^4.20.0",
     "jsonwebtoken": "9.0.2",
-    "mongoose": "8.6.1",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "8.6.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
-    "@types/multer": "^1.4.12",
     "nodemon": "3.1.4",
     "wrangler": "^3.76.0"
   }
